--- a/resources/css/menu.css
+++ b/resources/css/menu.css
@@ -20,7 +20,8 @@ body {
 .menu {
     margin-left: auto;
     margin-right: auto;
-    width: 400px;
+    width: 300px;
+    padding: 30px;
     background-color: #595856;
 }
 
@@ -58,6 +59,8 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+    width:100%;
+    padding: 10px;
 }
 
 .menu-button:hover {
